Aligned items and fixed grid size of overview
When less than 1080px, the overview sections becomes a 3x2 grid, the children inside are justified to center as well

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @import url("./Details.css");
 
 .main_card {
-	width: 50vw;
+	width: 50%;
 	aspect-ratio: 4/3;
 	background-color: var(--secondary-color);
 	border-radius: 2vw;
@@ -11,8 +11,11 @@
 	overflow: hidden;
 }
 
-@media (max-width < 1300px) {
+/*On hand held devices, the height > width*/
+@media (max-width: 1080px) {
     .main_card {
+		width: 60%;
 		flex-direction: column;
+		aspect-ratio: 3/4;
 	}
 }
