--- a/src/Overview.css
+++ b/src/Overview.css
@@ -40,3 +40,42 @@
     width: 100%;
     text-align: center;
 }
+
+@media (max-width: 1080px) {
+    .overview {
+        width: 100%;
+        height: 30%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-areas: 
+        'search Main_temp'
+        'Big_icon stats'
+        'Big_icon location';
+    }
+
+    .overview > * {
+        justify-self: center;
+    }
+
+    .searchBar {
+        grid-area: search;
+    }
+
+    .overview > .weather_ico {
+        width: 40%;
+        grid-area: Big_icon;
+    }
+
+    .current_temp {
+        grid-area: Main_temp;
+    }
+
+    .stats {
+        grid-area: stats;
+    }
+
+    .place_img {
+        grid-area: location;
+    }
+}
